feat(css): prepros created css from my css

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -144,6 +144,19 @@
           "imported": false,
           "parents": [],
           "type": "sass"
+        },
+        "89154b9e": {
+          "id": "89154b9e",
+          "path": "img/billboard.jpg",
+          "output": "img/billboard.jpg",
+          "name": "billboard.jpg",
+          "category": "IMAGE",
+          "size": 179515,
+          "type": "jpg",
+          "initialSize": 179515,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
